# pulumi-lambda-builders

./: .gitignore  CONTRIBUTING.md  Makefile  schema.json
.github/workflows/: build.yml  command-dispatch.yml  pull-request.yml  release.yml  run-acceptance-tests.yml  weekly-pulumi-update.yml
docs/: _index.md
examples/: examples_go_test.go  examples_test.go  go.mod
examples/simple/: Pulumi.yaml  index.ts  package.json
examples/simple-go/: Pulumi.yaml  go.mod  go.sum  main.go
examples/simple-go/cmd/simple/: main.go
examples/simple/cmd/: go.mod
provider/: go.mod
provider/cmd/pulumi-resource-lambda-builders/: requirements.txt  run-provider.py  schema.json  setup.py
provider/cmd/pulumi-resource-lambda-builders/lambda_builders_provider/: __main__.py  build_go.py  provider.py  test_build_go.py
sdk/: go.mod  go.sum
sdk/dotnet/: BuildGo.cs  Provider.cs  Pulumi.LambdaBuilders.csproj  Utilities.cs  pulumi-plugin.json
sdk/go/lambda-builders/: buildGo.go  doc.go  init.go  provider.go  pulumi-plugin.json
sdk/go/lambda-builders/internal/: pulumiUtilities.go
sdk/java/: README.md  build.gradle  settings.gradle
sdk/java/src/main/java/com/pulumi/lambdabuilders/: LambdabuildersFunctions.java  Provider.java  ProviderArgs.java  Utilities.java
sdk/java/src/main/java/com/pulumi/lambdabuilders/inputs/: BuildGoArgs.java  (+1 more)
sdk/nodejs/: buildGo.ts  index.ts  package.json  provider.ts  tsconfig.json
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumi_lambda_builders/: README.md  __init__.py  build_go.py  provider.py  pulumi-plugin.json
(+1 files in other folders)
