[project]
  name = "pulumi_lambda_builders"
  description = "Utilities for building AWS Lambda Functions"
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "pulumi-aws>=6.0.0,<7.0.0", "semver>=2.8.1"]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "0.2.0a1719503919+e0ef35f"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://pulumi.com"
    Repository = "https://github.com/pulumi/pulumi-lambda-builders"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_lambda_builders = ["py.typed", "pulumi-plugin.json"]
